--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -13,8 +13,8 @@
     mat-icon-button
     target="_blank"
     aria-label="Github Repo link"
-    href="https://github.com/sonusindhu/angular-signals-examples"
+    href="https://github.com/santoshmohan04/angular-signals-examples"
   >
-    <img src="/assets/images/github-icon.svg" />
+    <img src="assets/images/github-icon.svg" alt="github" />
   </a>
 </mat-toolbar>
