--- a/src/app/signal/signal-example1/signal-example1.component.html
+++ b/src/app/signal/signal-example1/signal-example1.component.html
@@ -9,7 +9,10 @@
   >
     Increase
   </button>
-  <button mat-raised-button color="primary" (click)="decreaseCount()">
+  <button mat-raised-button style="margin-right: 1rem" color="accent" (click)="decreaseCount()">
     Decrease
+  </button>
+  <button mat-raised-button color="warn" (click)="resetCount()">
+    Reset
   </button>
 </p>
