--- a/src/app/signal/signal-example10/signal-example10.component.html
+++ b/src/app/signal/signal-example10/signal-example10.component.html
@@ -13,7 +13,7 @@
   <table style="width: 100%">
     <thead>
       <tr>
-        <th>title</th>
+        <th>Title</th>
         <th>Category</th>
         <th>Brand</th>
         <th>Price</th>
