--- a/src/app/signal/signal-example5/signal-example5.component.html
+++ b/src/app/signal/signal-example5/signal-example5.component.html
@@ -1,6 +1,6 @@
 <h2>Example 5 - Todo List</h2>
 
-<mat-form-field>
+<mat-form-field style="margin-right: 1rem">
   <mat-label>Todo Name</mat-label>
   <input matInput name="todo" #todo />
 </mat-form-field>
